# sfllm

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README_CN.md  app.py  attempt.md  benchmark.py  client.py  cost_eval.md  inference_engine.py  pyproject.toml  queue_management.py  requirements.txt  setup.py  test_stream.py
docs/: api-reference.md  architecture.md  configuration.md  getting-started.md  performance-tuning.md  troubleshooting.md
docs/modules/: README.md  engine.md  serving.md
python/example/: batch_offline.py  test_model_runner.py  test_qwen3.py
python/myvllm/: __Init__.py
python/myvllm/engine/: inference_engine.py  model_loader.py  model_runner.py
python/myvllm/layers/: triton_attention.py
python/myvllm/models/: modeling_qwen3.py
python/sfllm/: __Init__.py  __init__.py  server_args.py  utils.py
python/sfllm/engine/: forward_params.py  inference_engine.py  memory_pool.py  model_loader.py  model_runner.py  model_worker.py  queue_management.py  sampling_params.py  schedule_batch.py  scheduler.py  scheduler_metrics.py  sequence.py  shedule_batch.py
python/sfllm/kernels/: decode_attention.py  extend_attention.py  rope.py  test_triton_kernel.py  triton_utils.py
python/sfllm/layers/: activations.py  layernorm.py  linear.py  logits_processor.py  op_base.py  parameter.py  radix_attention.py  rotary_embedding.py  sampler.py  triton_attention.py
python/sfllm/model_loader/: model_config.py  model_loader.py  registry.py  weight_utils.py
python/sfllm/models/: gemma3.py  llama.py  llama_eagle.py  llama_eagle3.py  modeling_qwen3.py  qwen2.py  qwen3.py
python/sfllm/serving/: app.py  benchmark.py  client.py  config.py  engine_server.py  message_formatter.py  (+4 more)
serving/: image_processor.py  inference_engine.py  model_loader.py  model_runner.py  queue_management.py  req_protocol.py  scheduler.py  text_generation.py  tokenizer.py
serving/model/: gemm3_causual.py  gemma3_mm.py
sfkernels/: CMakeLists.txt  setup.py
sfkernels/csrc/: cast.cuh  common_extension.cc  pytorch_extension_utils.h  pytorch_extension_utils_rocm.h
sfkernels/csrc/elementwise/: activation.cu  layernorm.cu  utils.h
sfkernels/csrc/quant/: per_tensor_quant_fp8.cu  per_token_quant_fp8.cu
sfkernels/include/: ops.h  utils.h
sfkernels/python/sf_kernel/: __init__.py
sfkernels/tests/: test_ops.py  test_rmsnorm.py
sfkernels/third_patry/flashinfer/include/flashinfer/: activation.cuh  math.cuh  vec_dtypes.cuh
sfkernels/third_patry/flashinfer/include/flashinfer/trtllm/common/: cudaBf16Fallbacks.cuh  cudaFp8Utils.h  cudaTypeUtils.cuh
(+21 files in other folders)
